# tiny_renderer_ray_tracing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
test/: CMakeLists.txt  unit_test.cc
